# RT

./: CMakeLists.txt  Makefile  README.md  RT  RT_CLIENT  author  cone_func.c  cylin_func.c  file_parcing.c  get_next_line.c  get_next_line.h  gfx.h  kernel.cl  light_calculation.c  light_manipulation.c  main.c  parce_peripherals.c  parce_peripherals_v2.c  plane_func.c  ray_tracing.c  sphere_func.c  vector_functions.c  vector_functions_v2.c  video_of_RT
frameworks/SDL2_image.framework/Headers/: SDL_image.h
frameworks/SDL2_ttf.framework/Headers/: SDL_ttf.h
includes/: rt_functions.h  rt_structs.h
libft/: Makefile  atoif.c  ft_atoi.c  ft_bzero.c  ft_cmpnoreg.c  ft_factorial.c  ft_find_after_c.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+30 more)
scenes/: color_disruption  cutted_cylinder  default_0  default_1  default_2  default_3  mandatory  mirror_room  reflection_and_transparency  spyder_wupsen  test  textures  triangle  working_test
source/: client_main.c  error_manager.c  figures_normals.c  find_fd.c  find_normal_to_figure.c  main.c  network_handling.c  run_rt.c
source/color_functions/: even_more_color_functions.c  find_everything.c  find_pixel_color.c  manage_pixel.c  other_color_disruptions.c  perlin_noise.c  some_find_color_func.c  texture_mapping.c
source/draw_scene/: apply_filter.c  draw_pixel_filter.c  draw_scene.c
source/event_management/: event_management.c  handle_axis_dimensions_for_ellipsoid.c  rotating_and_shift_camera.c  rotating_caps.c  rotating_objects.c
source/find_intersection/: choose_intersection.c  cone_find_closest_intersect.c  cyl_find_closest_intersect.c  cyl_find_limited.c  ellipsoid_find_closest_intersect.c  plane_find_closest_intersect.c  sphere_find_closest_intersect.c  triangle_find_closest_intersect.c
source/gui/: create_gui.c  gui.c  gui_check_buttons.c  gui_control_bars_show.c  gui_draw_objects_info.c  gui_draw_objects_info_2.c  gui_init_bmp.c  gui_object_change.c  gui_utils.c
source/math_functions/: actions_on_matrix.c  actions_on_vectors.c  actions_on_vectors2.c  algebraic_operations.c
source/parcing_function/: add_object_and_light.c  cam_parcing.c  cone_parcing.c  cylinder_parcing.c  ellipsoid_parcing.c  file_parcing.c  light_parcing.c  list_to_objects.c  parce_limited.c  parce_peripherals.c  parce_peripherals_v2.c  plane_parcing.c  sphere_parcing.c  triangle_parce.c
trash/: find_pixel_color.c  opencl_functions.c  sdl_keys.c
